--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
 
+@layer base {
+  html {
+    font-family: 'Poppins', sans-serif;
+  }
+}
+
 @keyframes fadeOut {
   0% {
     opacity: 1;
